add action , product template

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
       "components/*": [
         "components/*"
       ],
+      "asset/*": [
+        "asset/*"
+      ],
       "utils/*": [
         "utils/*"
       ],
